--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "dompurify": "^3.1.6",
+    "normalizr": "^3.6.2",
     "rc-slider": "^11.1.5",
     "rc-tooltip": "^6.2.0",
     "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.0",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.0",
@@ -17,6 +21,7 @@
     "react-slick": "^0.30.2",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
