--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@google-cloud/storage": "^7.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "dompurify": "^3.1.6",
+    "imagemin": "^9.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
     "normalizr": "^3.6.2",
     "rc-slider": "^11.1.5",
     "rc-tooltip": "^6.2.0",
@@ -15,6 +20,7 @@
     "react-accessible-accordion": "^5.0.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-lazyload": "^3.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
